  have been changed to allow missing data support with default settings.
- externalized measure functions to be used on vectors.
- some minor bug fixes
- required basic learner packages are not loaded into the global namespace anymore, requireNamespace
  is used internally instead. this ensures less name clashes and name shadowing
- resample passes dot arguments to the learner hyperpars

- new functions
-- getTaskType, getTaskId, getTaskTargetNames
-- plotROCRCurves
-- plotViperCharts
-- measureSSE, measureMSE, measureRMSE, measureMEDSE, ...
-- PreprocWrapperCaret

- new learners:
-- classif.bdk
-- classif.extraTrees
-- classif.nodeHarvest
-- classif.randomUniformForest
-- classif.xgboost
-- classif.xyf
-- regr.bartMachine
-- regr.bdk
-- regr.brnn
-- regr.cubist
-- regr.elmNN
-- regr.extraTrees
-- regr.nodeHarvest
-- regr.randomUniformForest
-- regr.xgboost
-- regr.xyf
-- surv.rpart

mlr_2.2:
- The web tutorial was MUCH improved!
- more example tasks and data sets
- Learners and tasks now support ordered factors as features.
  The task description knows whether ordered factors are present and it is checked whether the learner
  supports such a feature. We have set this property 'ordered' very conservatively, so very
  few learners have it, where we are sure ordered inputs are handled correctly during training.
  If you know of more models that support this, please inform us.
- basic R learners now have new slots: name (a descriptive name of the algorithm),
  short.name (abbreviation that can be used in plots and tables) and note
  (notes regarding slight changes for the mlr integration of the learner and such).
- makeLearner now supports some options regarding learner error handling and output which
  could before only be set globally via configureMlr
- Additional arguments for imputation functions to allow a more fine-grain
  control of dummy column creation
- imputeMin and imputeMax now subtract or add a multiple of the range of