@@ -23,7 +23,9 @@ getHyperPars.BaseEnsemble = function(learner, for.fun = c("train", "predict", "b
 
 # set hyper pars down in ensemble base learners, identify correct base learner + remove prefix
 #' @export
-setHyperPars2.BaseEnsemble = function(learner, par.vals) {
+setHyperPars2.BaseEnsemble = function(learner, par.vals,
+  on.par.without.desc = getMlrOption("on.par.without.desc"),
+  on.par.out.of.bounds = getMlrOption("on.par.out.of.bounds")) {
   ns = names(par.vals)
   parnames.bls = names(learner$par.set.bls$pars)
   for (i in seq_along(par.vals)) {
@@ -35,7 +37,8 @@ setHyperPars2.BaseEnsemble = function(learner, par.vals) {
         par.vals = setNames(par.vals[i], z$par.id))
     } else {
       # extra param of ensemble learner, just set it normally
-      learner = setHyperPars2.Learner(learner, par.vals = par.vals[i])
+      learner = setHyperPars2.Learner(learner, par.vals = par.vals[i],
+        on.par.without.desc, on.par.out.of.bounds)
     }
   }
   return(learner)
