@@ -52,3 +52,14 @@ test_that("setting 'when' works for hyperpars", {
 
 
 
+test_that("options are respected", {
+  configureMlr()
+  lrn = makeLearner("classif.mock2")
+  expect_error(setHyperPars(lrn, beta = 1), "available description object")
+  expect_warning(setHyperPars(lrn, beta = 1, on.par.without.desc = "warn"), , "available description object")
+  expect_is(setHyperPars(lrn, beta = 1, on.par.without.desc = "quiet"), "Learner")
+
+  expect_error(setHyperPars(lrn, alpha = 2), "feasible")
+  expect_warning(setHyperPars(lrn, alpha = 2, on.par.out.of.bounds = "warn"), , "feasible")
+  expect_is(setHyperPars(lrn, alpha = 2, on.par.out.of.bounds = "quiet"), "Learner")
+})
