@@ -18,6 +18,8 @@ mlr_2.3:
 - required basic learner packages are not loaded into the global namespace anymore, requireNamespace
   is used internally instead. this ensures less name clashes and name shadowing
 - resample passes dot arguments to the learner hyperpars
+- new option "on.par.out.of.bounds" to disable out-of-bound checks for model
+  paramters
 
 - new functions
 -- getTaskType, getTaskId, getTaskTargetNames
